# graph-convolution-network

./: .gitignore  README.md  main.py  pyproject.toml
config/: settings.yaml  task_config.yaml
src/: constant.py
src/config/: project_config.py  task_config.py
src/data/: load_data.py
src/evaluation/: evaluation.py
src/model/: gcn.py
src/task/: cora_node_classification.py
