[tool.poetry]
name = "graph-convolution-network"
version = "0.1.0"
description = ""
authors = ["Mahendra Thapa <mahendra@fusemachines.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
