[tool.poetry]
name = "graph-convolution-network"
version = "0.1.0"
description = ""
authors = ["Mahendra Thapa <mahendra@fusemachines.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.10.0"
torch = "^1.9.0"
click = "^8.0.1"
numpy = "^1.21.0"
scipy = "^1.7.0"
PyYAML = "^5.4.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
